--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <label for="Method"><i class="fa fa-money"></i> Method</label>
             </div>
             <div class="input-group">
-                <input type="number" name="Pin Code" id="Pin" required>
+                <input type="number" name="Pin Code" id="Pin" maxlength="5" required>
                 <label for="Pin"><i class="fa fa-thumb-tack"></i> Pin Number</label>
             </div>
             <button type="submit" id="button">SUBMIT <i class="fas fa-paper-plane"></i></button>
